--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
 
 
 .navbar {
-      
+      background-color: rgb(14, 14, 14);
+    
     border-radius: 20px;
  }
  
@@ -29,14 +30,16 @@ body{
      overflow: auto;
  }
  .navbar li a{
-     padding: 13px 12px;
-     color: blue;
-     text-decoration: none;
-     text-transform: uppercase;
-    
-     
- 
+      padding: 13px 12px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    text-transform: uppercase;
  }
+
+.navbar li :hover {
+    border-radius: 15px;
+    background-color: rgb(210, 228, 50);
+}
  .navbar input{
      padding: 3px 5px;
      margin: 23px 153px;
